Push some shizz

--- a/harpTest/_harp/index.jade
+++ b/harpTest/_harp/index.jade
@@ -1,2 +1,9 @@
 h1 Welcome to Harp.
 h3 This is yours to own. Enjoy.
+p Some new shizz to do. 
+
+ul
+  each member in members
+    li= member
+    
+p End of new shizz.
