--- a/harpTest/_harp/index.jade
+++ b/harpTest/_harp/index.jade
@@ -3,7 +3,7 @@ h3 This is yours to own. Enjoy.
 p Some new shizz to do. 
 
 ul
-  each member in members
+  each member in ["Andrew","Wes","Jeff"]
     li= member
     
 p End of new shizz.
