--- a/main.css
+++ b/main.css
@@ -8,6 +8,16 @@
   animation-direction: alternate;
 }
 
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  animation-duration: 2s;
+  animation-name: spin2;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
 @keyframes spin {
   0% {
     transform: scale( 0.1 );
@@ -21,5 +31,17 @@
   100% {
     transform: scale( 1 );
     transform: rotate(40deg);
+  }
+}
+
+@keyframes spin2 {
+  0% {
+    transform: rotate( 360deg ) scale( 1 );
+  }
+  50% {
+    transform: rotate( 180deg ) scale( 2 );
+  }
+  100% {
+    transform: rotate( 0deg ) scale( 1 );
   }
 }
